--- a/siteparavenda/index.html
+++ b/siteparavenda/index.html
@@ -10,8 +10,8 @@
     <header>
 
         <div id="title">
-            <img src="" alt="">
-            <h1>Espetos</h1>
+            <img src="image/logo-espeto.jpg" alt="">
+            <h1> Espetos</h1>
         </div>
 
             <ul id="navigation">
