--- a/siteparavenda/index.html
+++ b/siteparavenda/index.html
@@ -23,9 +23,9 @@
 
     
             <ul id="redes_sociais">
-                <li><a href=""> <img src="" alt="">ffff</a></li>
-                <li><a href=""> <img src="" alt="">ffff </a></li>
-                <li><a href=""> <img src="" alt="">ffff </a></li>
+                <li><a href="#"> <img src="image/logo-instagram.jpg" alt="Instagram"></a></li>
+                <li><a href="#"> <img src="image/logo-facebook.jpg" alt="Facebook"></a></li>
+                <li><a href="#"> <img src="image/logo-twitter.jpg" alt="Twitter"></a></li>
             </ul>
     </header>
     <main>
@@ -34,10 +34,10 @@
                 <h1>
                     O mais saboroso do Brasil e do mundo!
                 </h1> <br>
-                <p>Os melhores voce encontra aqui no espetinho dos macho alfa de bh</p><br>
+                <p>Os melhores voce encontra aqui no espetinho do Jonatas</p><br>
                 <ul>
                     <li><a href="">Reserve a Sua</a></li>
-                    <li><a href="">Mionte seu espetinho</a></li>
+                    <li><a href="">Monte seu espetinho</a></li>
                 </ul>
             </div>
         </div>
